# candle

./: Cargo.toml
candle-core/: Cargo.toml
candle-core/src/: cuda_backend.rs  lib.rs  test_utils.rs  utils.rs
candle-examples/: Cargo.toml
candle-examples/examples/llama2-c/: main.rs
candle-hip-kernels/: Cargo.toml  build.rs
candle-hip-kernels/src/: affine.cu  binary.cu  binary_op_macros.cuh  cast.cu  compatibility.cuh  conv.cu  cuda_utils.cuh  fill.cu  indexing.cu  lib.rs  reduce.cu  ternary.cu  unary.cu
candle-nn/: Cargo.toml
candle-nn/src/: ops.rs
candle-transformers/: Cargo.toml
